--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -22,4 +22,6 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 # Logging for tests
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.org.springframework.test=DEBUG
+
+# Disable data source auto-configuration to use test-specific datasource
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
