ci-cd: update sonar organization key

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # SonarCloud configuration
 sonar.projectKey=musicopedia-be
-sonar.organization=your-organization-key
+sonar.organization=sdikyarts
 
 # Source and test directories
 sonar.sources=src/main/java
