--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,6 +6,10 @@ sonar.organization=sdikyarts
 sonar.sources=src/main/java
 sonar.tests=src/test/java
 
+# Compiled classes
+sonar.java.binaries=build/classes/java/main
+sonar.java.test.binaries=build/classes/java/test
+
 # Java version
 sonar.java.source=21
 
