--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,6 +10,9 @@ sonar.tests=src/test/java
 sonar.java.binaries=build/classes/java/main
 sonar.java.test.binaries=build/classes/java/test
 
+# Dependencies/libraries
+sonar.java.libraries=build/libs/dependencies/*.jar
+
 # Java version
 sonar.java.source=21
 
