config: remove and update database credentials

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=musicopedia-be
 
 # PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://ep-still-star-adzf9bkg-pooler.c-2.us-east-1.aws.neon.tech/musicopedia-db?sslmode=require
-spring.datasource.username=musicopedia-db_owner
-spring.datasource.password=npg_af97TeXtclpL
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
@@ -13,6 +13,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # Connection Pool Configuration
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=${DB_MAX_POOL_SIZE:10}
+spring.datasource.hikari.minimum-idle=${DB_MIN_IDLE:5}
+spring.datasource.hikari.connection-timeout=${DB_CONNECTION_TIMEOUT:20000}
