--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.hikari.maximum-pool-size=${DB_MAX_POOL_SIZE:10}
 spring.datasource.hikari.minimum-idle=${DB_MIN_IDLE:5}
 spring.datasource.hikari.connection-timeout=${DB_CONNECTION_TIMEOUT:20000}
+
+# CORS Configuration
+# Replace these with your actual frontend domains
+app.cors.allowed-origins=http://localhost:3000,http://localhost:8080,https://yourdomain.com
+app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+app.cors.allowed-headers=Content-Type,Authorization,X-Requested-With,Accept,Origin
+app.cors.allow-credentials=false
+app.cors.max-age=3600
