--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,8 @@ spring.datasource.hikari.minimum-idle=${DB_MIN_IDLE:5}
 spring.datasource.hikari.connection-timeout=${DB_CONNECTION_TIMEOUT:20000}
 
 # CORS Configuration
-# Replace these with your actual frontend domains
-app.cors.allowed-origins=http://localhost:3000,http://localhost:8080,https://yourdomain.com
-app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-app.cors.allowed-headers=Content-Type,Authorization,X-Requested-With,Accept,Origin
-app.cors.allow-credentials=false
-app.cors.max-age=3600
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000}
+app.cors.allowed-methods=${CORS_ALLOWED_METHODS:GET,POST,PUT,DELETE,OPTIONS}
+app.cors.allowed-headers=${CORS_ALLOWED_HEADERS:Content-Type,Authorization,X-Requested-With,Accept,Origin}
+app.cors.allow-credentials=${CORS_ALLOW_CREDENTIALS:false}
+app.cors.max-age=${CORS_MAX_AGE:3600}
