feat: add Admin authorization for CUD requests

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -33,3 +33,6 @@ app.cors.max-age=${CORS_MAX_AGE:3600}
 logging.level.musicopedia=INFO
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=WARN
+
+# Admin User Configuration
+admin.token=${ADMIN_TOKEN}
