--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ app.cors.allowed-methods=${CORS_ALLOWED_METHODS:GET,POST,PUT,DELETE,OPTIONS}
 app.cors.allowed-headers=${CORS_ALLOWED_HEADERS:Content-Type,Authorization,X-Requested-With,Accept,Origin}
 app.cors.allow-credentials=${CORS_ALLOW_CREDENTIALS:false}
 app.cors.max-age=${CORS_MAX_AGE:3600}
+
+# Admin User Configuration
+admin.token=${ADMIN_TOKEN}
