--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -22,3 +22,7 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 # Logging for tests
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Admin User Configuration for tests
+app.admin.username=admin
+app.admin.password=admin
