--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -36,3 +36,5 @@ logging.level.org.hibernate.SQL=WARN
 
 # Admin User Configuration
 admin.token=${ADMIN_TOKEN}
+app.admin.username=${ADMIN_USERNAME}
+app.admin.password=${ADMIN_PASSWORD}
