--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,5 @@ app.cors.max-age=${CORS_MAX_AGE:3600}
 
 # Admin User Configuration
 admin.token=${ADMIN_TOKEN}
+app.admin.username=${ADMIN_USERNAME}
+app.admin.password=${ADMIN_PASSWORD}
